--- a/.gitignore
+++ b/.gitignore
@@ -115,3 +115,5 @@ Cargo.lock
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
+html/
+latex/
