Setup cmake build pipeline

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # File created using '.gitignore Generator' for Visual Studio Code: https://bit.ly/vscode-gig
-# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,c,rust
-# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,linux,c,rust
+# Created by https://www.toptal.com/developers/gitignore/api/visualstudiocode,rust,linux,c,cmake
+# Edit at https://www.toptal.com/developers/gitignore?templates=visualstudiocode,rust,linux,c,cmake
 
 ### C ###
 # Prerequisites
@@ -55,6 +55,23 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+### CMake ###
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+### CMake Patch ###
+# External projects
+*-prefix/
 
 ### Linux ###
 *~
@@ -111,7 +128,7 @@ Cargo.lock
 # Ignore code-workspaces
 *.code-workspace
 
-# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,linux,c,rust
+# End of https://www.toptal.com/developers/gitignore/api/visualstudiocode,rust,linux,c,cmake
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 
@@ -123,3 +140,4 @@ latex/
 
 /target
 /Cargo.lock
+build/
