--- a/rt_rs/Cargo.toml
+++ b/rt_rs/Cargo.toml
@@ -2,10 +2,15 @@
 name = "rt_rs"
 version = "0.1.0"
 edition = "2021"
-
+build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+atoi = "1.0.0"
+libc = "0.2.133"
 
 [lib]
-crate-type = ["cdylib"]
+crate-type=["staticlib"]
+
+[build-dependencies]
+cbindgen = "0.24.3"
