--- a/rt_rs/Cargo.toml
+++ b/rt_rs/Cargo.toml
@@ -2,7 +2,7 @@
 name = "rt_rs"
 version = "0.1.0"
 edition = "2021"
-build = "build.rs"
+# build = "build.rs"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
@@ -18,8 +18,8 @@ features = ["serde"]
 [dependencies.serde]
 features=["derive"]
 
-[lib]
-crate-type=["staticlib"]
+# [lib]
+# crate-type=["staticlib"]
 
 [build-dependencies]
 cbindgen = "0.24.3"
