Add orig and unit tests

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,5 +4,6 @@ project(rest-client)
 
 enable_testing()
 add_subdirectory(rt)
+add_subdirectory(rt_orig)
 add_subdirectory(libft)
 add_subdirectory(rt_rs)
