Remove converted code and Rust from CMake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.7)
 project(rest-client)
 
 enable_testing()
-add_subdirectory(rt)
+# add_subdirectory(rt)
 add_subdirectory(rt_orig)
 add_subdirectory(libft)
-add_subdirectory(rt_rs)
+# add_subdirectory(rt_rs)
